--- a/src/api/package.json
+++ b/src/api/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/app.ts",
-    "start": "nodemon ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_EVN=development nodemon ./src/index.ts",
+    "start": "NODE_ENV=production node ./src/index.ts",
+    "test": "jest --verbose --silent"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3",
+    "ts-node": "^10.9.2"
   }
 }
