--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    // "target": "ES2020",
-    "target": "ES2022",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable", "ES2023"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -14,25 +13,19 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    // "baseUrl": "./src",
-    // "paths": {
-    //   "@assets/*": ["./assets/*"],
-    //   "@components/*": ["./components/*"],
-    //   "@hooks/*": ["./hooks/*"],
-    //   "@layouts/*": ["./layouts/*"],
-    //   "@pages/*": ["./pages/*"],
-    //   "@routes/*": ["./routes/*"],
-    //   "@services/*": ["./services/*"],
-    //   "@types/*": ["./types/*"],
-    //   "@utils/*": ["./utils/*"]
-    // },
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    //absolute import
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src", "./jest.setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
