--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+package-lock.json
 dist
 dist-ssr
 *.local
@@ -23,3 +24,10 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+# testing
+/coverage
+coverage/Icov-report
+
+# production
+/build
