--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-devtools": "^5.40.0",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -44,6 +45,7 @@
     "jest-svg-transformer": "^1.0.0",
     "jest-transformer-svg": "^2.0.2",
     "postcss": "^8.4.38",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
